[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lucifer-engine"
version = "0.1.0"
description = "Orbital propagation engine — MECO 이후 궤도 전파·기동·건강도 판정"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
